--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
+<html class="home uk-notouch"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风 - 新风智能科技有限公司</title>
+    <meta name="keywords" content="空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风">
+    <meta name="description" content="江苏新风智能科技有限公司，空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风">
         <title>测试，你好</title>
         <link rel="stylesheet" href="./public/css/uikit.min.css" />
         <script src="./public/js/jquery.js"></script>
