--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风 - 新风智能科技有限公司</title>
     <meta name="keywords" content="空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风">
     <meta name="description" content="江苏新风智能科技有限公司，空气净化器，新风系统，新风智能科技，中央新风系统，家用净化器，空气净化器厂家，新风系统厂家，无管道新风，壁挂式新风，柜式新风">
-        <title>测试，你好</title>
         <link rel="stylesheet" href="./public/css/uikit.min.css" />
         <script src="./public/js/jquery.js"></script>
         <script src="./public/js/uikit.min.js"></script>
@@ -11,7 +10,7 @@
     <body>
 <a href=""><i class="uk-icon-cog"></i> ...</a>
 <a href=""><i class="uk-icon-bars" data-uk-offcanvas></i> ...</a>
-<a href=""><i class="uk-icon-bars"></i>你好世界</a>
+<a href=""><i class="uk-icon-bars"></i>你好世界！</a>
 <ul class="uk-nav uk-nav-offcanvas uk-text-center mobile-nav">hello world</ul>
 <a href="#tm-offcanvas" class="mobile-toggle uk-hidden-large" data-uk-offcanvas><i class="uk-icon-bars uk-icon-medium"></i>hello world</a>    </body>
 </html>
